// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContributorItem > matches snapshot 1`] = `
<DocumentFragment>
  <a
    class="block p-3 rounded-lg bg-secondary/20 hover:bg-secondary/40 border border-border/50 transition-colors"
    href="https://github.com/top-dev"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="flex items-center gap-3"
    >
      <img
        alt="top-dev"
        class="w-10 h-10 rounded-full"
        height="40"
        loading="lazy"
        width="40"
      />
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="text-sm font-medium"
        >
          top-dev
        </div>
        <div
          class="text-xs text-muted-foreground"
        >
          123 contributions
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="lucide lucide-trending-up w-4 h-4 text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 7h6v6"
        />
        <path
          d="m22 7-8.5 8.5-5-5L2 17"
        />
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`IssueItem > matches snapshot 1`] = `
<DocumentFragment>
  <a
    class="block p-3 rounded-lg hover:bg-secondary/40 border transition-colors bg-orange-500/5 border-orange-500/20 hover:border-orange-500/30"
    href="https://github.com/org/repo/issues/100"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="flex items-start gap-3"
    >
      <div
        class="mt-0.5"
        title="openIssue"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert w-4 h-4 text-orange-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <span
            class="text-sm font-medium truncate"
          >
            #100 bug: Something is broken
          </span>
          <span
            class="text-xs px-2 py-0.5 rounded shrink-0 bg-orange-500/20 text-orange-400"
          >
            open
          </span>
        </div>
        <div
          class="flex items-center gap-3 text-xs text-muted-foreground"
        >
          <span
            class="flex items-center gap-1"
          >
            <img
              alt="reporter"
              class="w-4 h-4 rounded-full"
              height="16"
              loading="lazy"
              width="16"
            />
            reporter
          </span>
          <span
            class="flex items-center gap-1"
            title="Updated 2h ago"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            2h ago
          </span>
          <span
            title="5 comments"
          >
            5 comments
          </span>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PRItem > matches snapshot for open PR 1`] = `
<DocumentFragment>
  <a
    class="block p-3 rounded-lg hover:bg-secondary/40 border transition-colors bg-green-500/5 border-green-500/20 hover:border-green-500/30"
    href="https://github.com/org/repo/pull/42"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="flex items-start gap-3"
    >
      <div
        class="mt-0.5"
        title="openPR"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-pull-request w-4 h-4 text-green-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M13 6h3a2 2 0 0 1 2 2v7"
          />
          <line
            x1="6"
            x2="6"
            y1="9"
            y2="21"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <span
            class="text-sm font-medium truncate"
          >
            #42 feat: Add great feature
          </span>
          <span
            class="text-xs px-2 py-0.5 rounded shrink-0 bg-green-500/20 text-green-400"
          >
            open
          </span>
        </div>
        <div
          class="flex items-center gap-3 text-xs text-muted-foreground"
        >
          <span
            class="flex items-center gap-1"
          >
            <img
              alt="dev"
              class="w-4 h-4 rounded-full"
              height="16"
              loading="lazy"
              width="16"
            />
            dev
          </span>
          <span
            class="flex items-center gap-1"
            title="Updated 2h ago"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            2h ago
          </span>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`ReleaseItem > matches snapshot 1`] = `
<DocumentFragment>
  <a
    class="block p-3 rounded-lg bg-secondary/20 hover:bg-secondary/40 border border-border/50 transition-colors"
    href="https://github.com/org/repo/releases/tag/v1.2.3"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="flex items-start gap-3"
    >
      <div
        class="mt-0.5"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-package w-4 h-4 text-blue-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
          />
          <path
            d="M12 22V12"
          />
          <polyline
            points="3.29 7 12 12 20.71 7"
          />
          <path
            d="m7.5 4.27 9 5.15"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <span
            class="text-sm font-medium"
          >
            v1.2.3 Release
          </span>
        </div>
        <div
          class="flex items-center gap-3 text-xs text-muted-foreground"
        >
          <span>
            release-bot
          </span>
          <span
            class="flex items-center gap-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
            2h ago
          </span>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
